# detrix-core

./: .gitignore  .mcp.json  .overnight-dev.json  AGENTS.md  CLAUDE.md  README.md  STRATEGY.md  epdintmol1v6tabescsspgt7umemupvo  innjbqr3krbhta82tkgnktu0eutkifqi  manifest  ohrmlvcvjtfebdokqvhol1uanjna99gk.darc  pyproject.toml
docs/: agentxrd-langfuse-judge-bridge-20260428.md  agentxrd-langfuse-judge-bridge-plan-20260428.md  agentxrd-scientist-judge-demo-20260428.md  agentxrd-scientist-judge-harness-plan-20260428.md  agentxrd-scientist-judge-yc-demo-20260428.md  agentxrd-scientist-judge-yc-demo-plan-20260428.md  agentxrd-v2-transition-admission-pack-ui-contract-20260504.md  autoresearch-landscape-eval-20260423.md  bead-native-harness-compiler-20260505.md  binary20-governed-judge-cohort-20260428.md  binary20-governed-judge-cohort-plan-20260428.md  bitter-lesson-harness-implications-20260423.md  claude-code-evaluation-20260331.md  competitive-landscape-20260418.md  customer-prospect-matrix.md  demo-yc-terminal-transcript-20260427.md  detrix-moat-memory-20260428.md  detrix-startup-failure-analysis-20260503.md  dpm-paper-eval-20260423.md  failure-to-harness-product-focus-20260502.md  ml-intern-governed-worker.md  ml-intern-qwen-spike-20260426.md  outreach-plan-2026-05-01.md  pi-agent-harness-research-20260417.md  quickstart.md  qwen-improvement-proof-2026-05-03.md  reliability-first-positioning-20260503.md  scoring-bridge-research.md  session-2026-05-01-pricing-strategy-review.md  skillify-handoff-20260424.md  yc-gtm-demo-outreach-plan-20260427.md  yc-pitch-reliability-admission-20260503.md  yc-process-playbook-2026-05-05.md  yc-sdl-narrative-research-20260501.md
examples/: axv2_sample_traces.jsonl  axv2_triage_report.md  seed_pipeline.yaml  wrap_example.py
pi-extension/: index.ts  package.json
scripts/: demo_agentxrd_judge_yc.py  demo_agentxrd_langfuse_judge_bridge.py  demo_binary20_governed_judge_cohort.py  ingest_axv2_run.py  smoke_train.py
tests/: test_admission_builder.py  test_agent_memory_config.py  test_agentxrd_drift_replay.py  test_agentxrd_failure_harness_cli.py  (+43 more)
(+91 files in other folders)
