[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detrix"
version = "0.1.0"
description = "Make any AI agent pipeline reproducible, governed, and self-improving"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gabe Graves"}
]
keywords = ["ai", "agents", "pipelines", "reproducibility", "governance", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
xrd = ["numpy>=2.2.6", "matplotlib>=3.10.8"]
mlflow = ["mlflow>=2.10.0"]
observability = ["langfuse>=3.0.0"]
bridge = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/gabegraves/detrix-core"
Repository = "https://github.com/gabegraves/detrix-core"
Issues = "https://github.com/gabegraves/detrix-core/issues"

[project.scripts]
detrix = "detrix.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.isort]
known-first-party = ["detrix"]
